Maven dependency updated and fixed basic errors to compile projects