@@ -12,8 +12,8 @@
       <module>spark-jobs</module>
   </modules>
   <properties>
-  	<hibernate.version>4.3.10.Final</hibernate.version>
-  	<slf4j.version>1.7.10</slf4j.version>
+  	<hibernate.version>4.3.11.Final</hibernate.version>
+  	<slf4j.version>1.8.0-beta2</slf4j.version>
 
   </properties>
   <dependencies>	
@@ -58,7 +58,7 @@
 	  <dependency>
 		  <groupId>com.google.code.gson</groupId>
 		  <artifactId>gson</artifactId>
-		  <version>2.2.2</version>
+		  <version>2.8.5</version>
 	  </dependency>
 
   </dependencies>
@@ -68,16 +68,15 @@
                 <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.2</version>
+				<version>3.8.0</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<release>11</release>
 				</configuration>
 			</plugin>
 						<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
-				<version>2.6</version>
+				<version>3.1.0</version>
 				<configuration>
 					<skip>false</skip>
 				</configuration>
@@ -87,7 +86,12 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.18</version>
+				<version>3.0.0-M1</version>
+				<configuration>
+					<argLine>
+						--illegal-access=permit
+					</argLine>
+				</configuration>
 			</plugin>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
